<resources>
    <string name="app_name">trial</string>
    <string name="cart">Your Cart</string>
    <string name="Item">Items</string>
    <string name="Item1">Items</string>
    <string name="Quantity">Qty</string>
    <string name="price">Price</string>
    <string name="product">Product Name</string>
    <string name="price1">Rs.****</string>
    <string name="qty">**</string>
    <string name="total">Total Amount</string>
    <string name="Delivery">Delivery Fee</string>
    <string name="ToPay">To Pay</string>
    <string name="CheckOut">Proceed to Checkout</string>
    <string name="signIn">Sign In</string>
    <string name="signIn1">choose How You Want to Sign In</string>
    <string name="Admin">Log In As Admin</string>
    <string name="login">Login As User</string>
    <string name="Admin1">Login As Admin</string>
    <string name="Uname">Enter Username or Email</string>
    <string name="forgot">Forgot your password</string>
    <string name="forgotPw">Forgot your password?</string>
    <string name="SignIn">OR Sign In Using</string>
    <string name="or">OR</string>
    <string name="signIn2">Sign in Using</string>
    <string name="Account">Need an Account? Sign Up</string>
    <string name="AddItems">Add Items</string>
    <string name="itemName">Enter Item Name</string>
    <string name="itemName1">Enter Item Name</string>
    <string name="ItemPrice">"Enter Item price "</string>
    <string name="priceItm">Enter Item Price</string>
    <string name="item3">Enter Item Description</string>
    <string name="addItem">Add Item</string>
    <string name="remove">Remove Items</string>
    <string name="itemCode">Enter Item code</string>
    <string name="reason">Reason</string>
    <string name="update">Update Item</string>
    <string name="Category">Categories</string>
    <string name="search">Search Items</string>
    <string name="ForYou">For You</string>
    <string name="signIn3">Choose how you want to Sign In</string>
    <string name="Veg">Vegetables</string>
    <string name="spices">Spices</string>
    <string name="crafts">Crafts</string>
    <string name="p1">Leaks</string>
    <string name="p2">Turmeric</string>
    <string name="p3">Sea shells craft</string>
    <string name="p4">Carrot</string>
    <string name="p5">Beetroot</string>
    <string name="p6">Ginger</string>
    <string name="p7">KeyTag</string>
    <string name="p8">Tea pot set</string>
    <string name="p9">Black pepper</string>
    <string name="add">ADD</string>
    <string name="product1">Carrot</string>
    <string name="Price1">1kg - Rs.xxx.xx</string>
    <string name="desc">Carrots are the ideal snack since they are crunchy, rich of nutrients, low in calories, and sweet. They\'re linked to better heart and eye health, better digestion, and even weight loss. This root vegetable comes in a variety of colors, sizes, and forms, all of which are nutritious complements to any diet.</string>
    <string name="add1">Add to Cart</string>
    <string name="delete">delete</string>
    <string name="Admin2">Admin</string>
    <string name="spices1">Spices</string>
    <string name="spicesNew">SPICES</string>
    <string name="craft">CRAFTS</string>
    <string name="reason1">Enter reason here</string>
    <string name="description">Enter description</string>
    <string name="Price2">1kg - Rs. xxxx.xx</string>
    <string name="leaks2">Leeks boast a variety of nutrients and beneficial compounds that may improve your digestion, promote weight loss, reduce inflammation, fight heart disease, and combat cancer. In addition, they may lower blood sugar levels, protect your brain, and fight infections. These alliums, which are closely related to garlic and onions, make great additions to a healthy diet.</string>
    <string name="beet2">Beetroots are a good source of nutrients, fiber, and many plant compounds. Their health benefits include improved heart health and enhanced exercise capacity, both of which are attributed to their inorganic nitrate content. Beets are sweet and especially delicious when mixed in salads. Easy to prepare, they can be eaten raw, boiled, or baked.</string>
    <string name="turmeric">Turmeric and especially its most active compound curcumin have many scientifically-proven health benefits, such as the potential to prevent heart disease, Alzheimer’s and cancer. It’s a potent anti-inflammatory and antioxidant and may also help improve symptoms of depression and arthritis.</string>
    <string name="ginger">Ginger can protect against age-related damage to the brain. It can also improve brain function in elderly women. Ginger contains a substance called 6-gingerol, which may have protective effects against cancer. However, this needs to be studied a lot more. There is some evidence, in both animals and humans, that ginger can lead to significant reductions in LDL cholesterol and blood triglyceride levels. Ginger appears to be very effective against menstrual pain when taken at the beginning of the menstrual period. Ginger appears to speed up emptying of the stomach, which can be beneficial for people with indigestion and related stomach discomfort.</string>
    <string name="Ginger">Ginger can protect against age-related damage to the brain.  It can also improve brain function in elderly women. There is some evidence, in both animals and humans,  that ginger can lead to significant reductions in LDL cholesterol  and blood triglyceride levels. Ginger appears to be very effective  against menstrual pain when taken at the beginning of the menstrual period.  Ginger appears to speed up emptying of the stomach, which can be beneficial  for people with indigestion and related stomach discomfort.</string>
    <string name="pepper">Brownish black colour whole pepper seeds, which add an aromatic and spicy flavour to meals.</string>
    <string name="pepper1">Black pepper is a warming spice according to Ayurveda. It was administered to patients who suffered from such ailments as diarrhoea, constipation, arthritis, insect bites, and pulmonary and cardiovascular troubles.Brownish black colour whole pepper seeds, which add an aromatic and spicy flavour to meals.</string>
    <string name="sea">Seashell craft is a major art form of Goa. Converting them into extraordinary pieces of work. Shells of various sizes, shapes and shades are used in the making of ornaments like necklaces, rings, bracelets and brooches.</string>
    <string name="pot">This tea pot set is made with coconut wood.  This can be used in serving tea,coffee and as a home, hotel or resort decoration. This is in the natural coconut wood color. This is eco-friendly and lighweight.</string>
    <string name="keytag">A key tag is made out of coconut shell with various shapes of  animal which helps you to avoid misplacement of keys of valuable things. 100% Eco-friendly.  100% Natural  Completely this handcraft is done by a skilled Sri Lankan artisans.</string>
    <string name="local">LOCAL TREASURES</string>
    <string name="View">View Items</string>
    <string name="item">Item</string>
    <string name="product2">Product</string>
    <string name="priceNew">500g Rs. 160.00</string>
    <string name="price3">500g - Rs. 150.00</string>
    <string name="price4">250g - Rs. 280.00</string>
    <string name="price5">50g - Rs. 280.00</string>
    <string name="price6">Rs. 1500.00</string>
</resources>